refactor: update assertions in repository tests to use getFirst() for improved readability